test/scc/stmt/semantic-errors/031.t
void test()
{
    for(;;)
        int a;
}